@@ -7,7 +7,8 @@ name Bit
 server irc.us.freenode.net
 port 6667
 //channels #blacksheep #nilb
-channels #nilbus-test
+channels #nilbus
 greeting Hello, I am %n, the channel bot. You all suck.
 hello hello hi yo hey greetings konichiwa hola sup
 logdir /home/vino/sephiabot
+sephiadir /home/nilbus/svn/sephiabot/trunk
