@@ -8,3 +8,4 @@ channels #blacksheep #nilb
 greeting Hello, I am %n, the channel bot. You all suck.
 hello hello hi yo hey greetings konichiwa hola sup
 logdir /home/vino/sephiabot
+sephiadir /home/vino/svn/sephiabot/trunk
